--- a/B-MIN-13/manifest.json
+++ b/B-MIN-13/manifest.json
@@ -1,15 +1,16 @@
 {
     "@context": "http://iiif.io/api/presentation/3/context.json",
-    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3903/manifest.json",
+    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B-MIN-13/manifest.json",
     "type": "Manifest",
     "label": {
         "en": [
-            "Henry Frederick, Prince of Wales 1594-1612"
+            "A lady, called Frances Walsingham, Countess of Essex (b.1550)"
         ]
     },
     "summary": {
         "en": [
-            "Monogram 'IO' in gold to the right of the head."
+            "A young woman depicted in a highly elaborate costume and standing ruff with extensive lace-detailing. The white dress and lace were set off with copious strokes of shell-silver to indicate highlights on pearls and jewels, but also imitating silver-thread embroidery on the bodice, which has now tarnished to black. While the miniature is highly worked and would have initially glittered when held and moved as a result of the shell silver applications catching the light, it has an otherwise restrained palette that would have set off the very fair complexion of the sitter.",
+            "The dark grey background painted with bone black and possibly an organic dye is an unusual choice among the Isaac Oliver's miniatures analysed.\nThe UV image clearly shows retouching in the flesh tones and the background and outlining of the white detailing in the dress; the bright UV fluorescence indicates the use of zinc white for the extensive retouching. The miniature has suffered from the loss of many of its silver highlights on pearls and jewellery, and of the bodied daubs of lead white siting beneath. The best preserved shell silver passage is the star-shaped pendant, where the silver sits on top of gold. Mercury, possibly in the form of quicksilver, occurs simultaneously with the silver and could suggest the use of an amalgam."
         ]
     },
     "requiredStatement": {
@@ -27,28 +28,28 @@
     "rights": "http://creativecommons.org/licenses/by-nc-nd/4.0/",
     "items": [
         {
-            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3903/canvas/0",
+            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B-MIN-13/canvas/0",
             "type": "Canvas",
-            "height": 4922,
-            "width": 3841,
+            "height": 3323,
+            "width": 2714,
             "items": [
                 {
-                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3903/page/0/0",
+                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B-MIN-13/page/0/0",
                     "type": "AnnotationPage",
                     "items": [
                         {
-                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3903/painting/0",
+                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B-MIN-13/painting/0",
                             "type": "Annotation",
                             "motivation": "painting",
                             "body": {
                                 "type": "Choice",
                                 "items": [
                                     {
-                                        "id": "https://iiif.fitz.ms/iiif/3/e7ea4105-d30f-4831-9a29-23108129dc93.jpg/full/max/0/default.jpg",
+                                        "id": "https://iiif.fitz.ms/iiif/3/f0dd7394-fb5c-4d8b-85b4-b8faf4567579.jpg/full/max/0/default.jpg",
                                         "type": "Image",
                                         "format": "image/jpeg",
-                                        "height": 4922,
-                                        "width": 3841,
+                                        "height": 3323,
+                                        "width": 2714,
                                         "label": {
                                             "en": [
                                                 "Natural Light"
@@ -56,18 +57,18 @@
                                         },
                                         "service": [
                                             {
-                                                "id": "https://iiif.fitz.ms/iiif/3/e7ea4105-d30f-4831-9a29-23108129dc93.jpg",
+                                                "id": "https://iiif.fitz.ms/iiif/3/f0dd7394-fb5c-4d8b-85b4-b8faf4567579.jpg",
                                                 "type": "ImageService3",
                                                 "profile": "level2"
                                             }
                                         ]
                                     },
                                     {
-                                        "id": "https://iiif.fitz.ms/iiif/3/b9022dca-14e5-4b3b-9354-d82fc235a494.jpg/full/max/0/default.jpg",
+                                        "id": "https://iiif.fitz.ms/iiif/3/768f48fe-ecef-4ee9-ba70-2fd96aee9af7.jpg/full/max/0/default.jpg",
                                         "type": "Image",
                                         "format": "image/jpeg",
-                                        "height": 4922,
-                                        "width": 3841,
+                                        "height": 3323,
+                                        "width": 2714,
                                         "label": {
                                             "en": [
                                                 "Raking Light"
@@ -75,18 +76,18 @@
                                         },
                                         "service": [
                                             {
-                                                "id": "https://iiif.fitz.ms/iiif/3/b9022dca-14e5-4b3b-9354-d82fc235a494.jpg",
+                                                "id": "https://iiif.fitz.ms/iiif/3/768f48fe-ecef-4ee9-ba70-2fd96aee9af7.jpg",
                                                 "type": "ImageService3",
                                                 "profile": "level2"
                                             }
                                         ]
                                     },
                                     {
-                                        "id": "https://iiif.fitz.ms/iiif/3/13bd3c40-d587-430b-9944-91eb42677576.jpg/full/max/0/default.jpg",
+                                        "id": "https://iiif.fitz.ms/iiif/3/1ead5ffd-2afd-4d53-bac7-f1b20a831a66.jpg/full/max/0/default.jpg",
                                         "type": "Image",
                                         "format": "image/jpeg",
-                                        "height": 4922,
-                                        "width": 3841,
+                                        "height": 3323,
+                                        "width": 2714,
                                         "label": {
                                             "en": [
                                                 "Infrared"
@@ -94,18 +95,18 @@
                                         },
                                         "service": [
                                             {
-                                                "id": "https://iiif.fitz.ms/iiif/3/13bd3c40-d587-430b-9944-91eb42677576.jpg",
+                                                "id": "https://iiif.fitz.ms/iiif/3/1ead5ffd-2afd-4d53-bac7-f1b20a831a66.jpg",
                                                 "type": "ImageService3",
                                                 "profile": "level2"
                                             }
                                         ]
                                     },
                                     {
-                                        "id": "https://iiif.fitz.ms/iiif/3/08e88d77-8434-479d-9d02-a7e15a240f42.jpg/full/max/0/default.jpg",
+                                        "id": "https://iiif.fitz.ms/iiif/3/88c62713-6241-432a-83bc-2667ea2b093e.jpg/full/max/0/default.jpg",
                                         "type": "Image",
                                         "format": "image/jpeg",
-                                        "height": 4922,
-                                        "width": 3841,
+                                        "height": 3323,
+                                        "width": 2714,
                                         "label": {
                                             "en": [
                                                 "Ultraviolet"
@@ -113,18 +114,18 @@
                                         },
                                         "service": [
                                             {
-                                                "id": "https://iiif.fitz.ms/iiif/3/08e88d77-8434-479d-9d02-a7e15a240f42.jpg",
+                                                "id": "https://iiif.fitz.ms/iiif/3/88c62713-6241-432a-83bc-2667ea2b093e.jpg",
                                                 "type": "ImageService3",
                                                 "profile": "level2"
                                             }
                                         ]
                                     },
                                     {
-                                        "id": "https://iiif.fitz.ms/iiif/3/de2dbb64-3373-46f3-bcfd-3e5349c4198c.jpg/full/max/0/default.jpg",
+                                        "id": "https://iiif.fitz.ms/iiif/3/2d403596-0d20-439b-9cec-690a26ceed29.jpg/full/max/0/default.jpg",
                                         "type": "Image",
                                         "format": "image/jpeg",
-                                        "height": 4922,
-                                        "width": 3841,
+                                        "height": 3323,
+                                        "width": 2714,
                                         "label": {
                                             "en": [
                                                 "X-ray"
@@ -132,7 +133,7 @@
                                         },
                                         "service": [
                                             {
-                                                "id": "https://iiif.fitz.ms/iiif/3/de2dbb64-3373-46f3-bcfd-3e5349c4198c.jpg",
+                                                "id": "https://iiif.fitz.ms/iiif/3/2d403596-0d20-439b-9cec-690a26ceed29.jpg",
                                                 "type": "ImageService3",
                                                 "profile": "level2"
                                             }
@@ -140,7 +141,7 @@
                                     }
                                 ]
                             },
-                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3903/canvas/0"
+                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B-MIN-13/canvas/0"
                         }
                     ]
                 }
@@ -148,12 +149,12 @@
             "physicalDimensions": {
                 "type": "PhysicalDimension",
                 "profile": "http://iiif.io/api/annex/extensions/physdim",
-                "physicalScale": 0.0108,
+                "physicalScale": 0.0166,
                 "physicalUnits": "mm"
             },
             "annotations": [
                 {
-                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3903/page/0/0",
+                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B-MIN-13/page/0/0",
                     "type": "AnnotationPage",
                     "items": []
                 }
